# ai-memory-agent

./: .dockerignore  .env.example  .gitignore  CHUNKING_IMPROVEMENT_PLAN.md  CLAUDE.md  DEMO_SCENARIO.md  Dockerfile  PHASE2_IMPROVEMENTS.md  PHASE3_COMPLETE.md  README.md  claude.md  docker-compose.yml  errors.md  flow.html  improve_260206.md  masterplan.md  mchat_plan.md  pyproject.toml  update.md
ai_memory_agent_sdk/: README.md  __init__.py  agent.py  client.py  exceptions.py  pyproject.toml
ai_memory_agent_sdk/ai_memory_agent_sdk/: __init__.py  agent.py  client.py  exceptions.py  sync_client.py
app/: streamlit_app.py
data/demo_documents/: 품질검사_매뉴얼.pptx  프로젝트_가이드.txt
data/sqlite/: memory.db-journal
docs/: agent-integration-guide.html  ai-memory-agent-workflow.html  channel-summary-scenarios.md  jina-reranker-setup.md  mattermost-setup.md  mchat-integration.md  mchat-test-guide.md  quickstart.md  report.md  verification.md
docs/migration/: README.md  feat-intelligent-chunking-detailed.md  feat-intelligent-chunking.md  phase1-intelligent-chunking.md  phase2-hierarchical-memory.md  phase3-adaptive-chunking.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tmpclaude-816d-cwd  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts  vitest.config.ts
frontend/public/: guide.html
frontend/src/: App.tsx  index.css  main.tsx
scripts/: check_db.py  delete_mchat_channels.py  fix_agent_vectors.py  reindex_vectors.py  upload_test_document.py  upload_test_document_with_auth.py  verify_server.py
src/: __init__.py  config.py  main.py
src/admin/: __init__.py  router.py  schemas.py  service.py
src/agent/: middleware.py  repository.py  router.py  schemas.py  service.py  webhook.py
src/auth/: __init__.py  router.py  schemas.py  service.py
src/chat/: __init__.py  repository.py  router.py  schemas.py  service.py
src/document/: __init__.py  repository.py  router.py  schemas.py  service.py
src/mchat/: __init__.py  client.py  create_mattermost_user.py  debug_connection.py  example.py  polling_worker.py  router.py  summary.py  worker.py
src/memory/: __init__.py  adaptive.py  chunking.py  entity_repository.py  hierarchical.py  pipeline.py  repository.py  router.py  schemas.py  service.py
src/permission/: __init__.py  repository.py  router.py  schemas.py  service.py
src/scripts/: __init__.py  agent_sdk_demo.py  create_demo_documents.py  demo_agent_sdk.py  interactive_demo.py  seed_data.py  seed_demo.py
src/share/: __init__.py  repository.py  router.py  schemas.py  service.py
src/shared/: __init__.py  auth.py  database.py  exceptions.py  rate_limiter.py  vector_store.py
src/user/: __init__.py  repository.py  router.py  schemas.py  service.py
src/websocket/: __init__.py  manager.py  router.py
tests/: conftest.py  test_adaptive.py  test_chunking.py  test_hierarchical.py
tests/chatbot/: README.md  external_chatbot_test.py  test_chatbot.py  test_simple.py
tests/integration/: conftest.py  test_chat_api.py  test_health_api.py  test_memory_api.py
tests/unit/: test_auth.py  test_chat_repository.py  test_exceptions.py  (+4 more)
(+87 files in other folders)
