[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-memory-agent-sdk"
version = "0.1.0"
description = "AI Memory Agent SDK - 외부 Agent에서 AI Memory Agent 시스템으로 데이터를 전송하기 위한 Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Memory Agent Team"}
]
keywords = ["ai", "memory", "agent", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
agent = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
all = [
    "ai-memory-agent-sdk[agent,dev]",
]

[project.urls]
Homepage = "https://github.sec.samsung.net/work/ai-memory-agent-sdk"
Documentation = "https://github.sec.samsung.net/work/ai-memory-agent-sdk#readme"
Repository = "https://github.sec.samsung.net/work/ai-memory-agent-sdk.git"

[tool.hatch.build.targets.wheel]
packages = ["ai_memory_agent_sdk"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
