[project]
name = "ai-memory-agent-sdk"
version = "0.1.0"
description = "Python SDK for AI Memory Agent - 사내 AI 에이전트 지식 인프라 플랫폼"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_memory_agent_sdk"]
